[package]
name = "discord_bot"
version = "0.0.0"
authors = ["thek0tyara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = [
    "client",
    "standard_framework",
    "voice"
]
version = "0.9.0"

[dependencies.tokio]
features = [
    "full"
]
version = "0.2"